k8s-manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trackify
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: trackify
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 251986419004.dkr.ecr.eu-central-1.amazonaws.com/prpo/trackify:user-service-latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: trackify
spec:
  selector:
    app: user-service
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goals-service
  namespace: trackify
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: goals-service
  template:
    metadata:
      labels:
        app: goals-service
    spec:
      containers:
      - name: goals-service
        image: 251986419004.dkr.ecr.eu-central-1.amazonaws.com/prpo/trackify:goals-service-latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: goals-service
  namespace: trackify
spec:
  selector:
    app: goals-service
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entries-service
  namespace: trackify
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: entries-service
  template:
    metadata:
      labels:
        app: entries-service
    spec:
      containers:
      - name: entries-service
        image: 251986419004.dkr.ecr.eu-central-1.amazonaws.com/prpo/trackify:entries-service-latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: entries-service
  namespace: trackify
spec:
  selector:
    app: entries-service
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailer-service
  namespace: trackify
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mailer-service
  template:
    metadata:
      labels:
        app: mailer-service
    spec:
      containers:
      - name: mailer-service
        image: 251986419004.dkr.ecr.eu-central-1.amazonaws.com/prpo/trackify:mailer-service-latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mailer-service
  namespace: trackify
spec:
  selector:
    app: mailer-service
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-service
  namespace: trackify
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: pdf-service
  template:
    metadata:
      labels:
        app: pdf-service
    spec:
      containers:
      - name: pdf-service
        image: 251986419004.dkr.ecr.eu-central-1.amazonaws.com/prpo/trackify:pdf-service-latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: pdf-service
  namespace: trackify
spec:
  selector:
    app: pdf-service
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trackify-ingress
  namespace: trackify
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:251986419004:certificate/9518bded-595a-4577-bd9f-41297481c22e
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /api/goals
        pathType: Prefix
        backend:
          service:
            name: goals-service
            port:
              number: 80
      - path: /api/entries
        pathType: Prefix
        backend:
          service:
            name: entries-service
            port:
              number: 80
      - path: /api/mailer
        pathType: Prefix
        backend:
          service:
            name: mailer-service
            port:
              number: 80
      - path: /api/pdf
        pathType: Prefix
        backend:
          service:
            name: pdf-service
            port:
              number: 80
